2003-05-05  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* packages/winbuild/packages.dsw : removed obsolete packages (Windows port)
	* packages/ispw/c/src/osc.h: added missing ISPW_API in function declaration (Windows port)

	* packages/numeric/c/src/numeric.h: added missing declaration of random_config (Windows port)

	* include/fts/packages.h: added missing FTS_API for fts_package_get_class declaration (Windows port)
	
	* packages/io/c/src/filestream.c, packages/io/c/src/wacom.c: applied patches send by Jarek Myszewski (Windows port).

	* packages/ispw/winbuild/ispw.dsp, packages/ispw/winbuild/ispw_java.mak: applied patches send by Jarek Myszewski (Windows port).

	* packages/midi/winbuild/midi.dsp :applied patches send by Jarek Myszewski (Windows port).

	* packages/numeric/winbuild/numeric.dsp :applied patches send by Jarek Myszewski (Windows port).
	
2003-04-29  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>, Riccardo Borghesi  <Riccardo.Borghesi@ircam.fr>

	* works on jMax Windows port (updated porject files, fixed source code).
	
	* include/ftsprivate/template.h, fts/patcher.c (patcher_open_help_patch): added support for 
	template help patch

2003-04-28  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* configure.in, fts/linux.c: added preprocessor conditionnal on USE_ALSA before loading alsa package.

	* packages/alsa/c/src/Makefile.am: use variable exported by alsa.m4 for CFLAGS and LDFLAGS.

2003-04-11  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fts/jmax.c: use pie connection as default connection (windows port)
	
	* fts/file.c, fts/jmax.c, fts/thread.c, fts/win32.c, include/ftsconfig-win32.h, include/fts/thread.h : applied patches send by Jarek Myszewsky (windows port)

2003-04-07  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fts/fts.c (fts_init): added --no-client flag to start fts without client support (use for libfts)
